# MapMatching4GMNS-v0.2.2-master

./: MapMatching4GMNS_colab.ipynb  MapMatching4GMNS_colab_20210414.ipynb  README-doc.docx  README.md  setup.py
MapMatching4GMNS/: MapMatching4GMNS.ipynb  MapMatching4GMNS.py  MapMatching4GMNS_colab (1).ipynb  MapMatching4GMNS_colab.ipynb  __init__.py  __version__.py  agent.csv  link_performance.csv  test.py
MapMatching4GMNS/dataset/: agent.csv  input_agent.csv
MapMatching4GMNS_test_version/: MapMatching4GMNS.py  agent.csv  link.csv  link_performance.csv  mmg_test.py  node.csv
dataset/: agent.csv  link.csv
datasets/Phx_I10_micronet/: agent.csv
datasets/Phx_I10_micronet/https:/github.com/asu-trans-ai-lab/MapMatching4GMNS/tree/master/datasets/: Phx_I10_micronet
doc/: User Guide.docx
engine/: CMakeLists.txt  MapMatching4GMNS.cpp  MapMatching4GMNS.h
release/: agent.csv  input_agent.csv  link_performance.csv  log.txt
src/trace2route/: CSVParser.h  trace2route.cpp  trace2route.sln  trace2route.vcxproj  trace2route.vcxproj.filters
